Fix text-blocks warnings for real instead of suppressing; trim comments
Report.projectAmbiguousPackageSegment and Violation.cacheInvalidFile had
their closing \"\"\" indented a few spaces while every content line sits
at column 0 - since the minimum indentation is 0, those stray spaces
before the closer are exactly what -Xlint:text-blocks was warning would
be silently discarded. Un-indenting the closer removes the warning with
no change to the resulting string (the strip amount was already 0).

Also trimmed the new files' header comments to what's actually needed to
run them, pointing at development-guide.txt for the rest, and dropped two
references to this machine's own Claude Code skill names, which mean
nothing to anyone else reading this repo.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_0179P3MyZ1a7hrgsJvjtJD6E